adding changes. doing price range in menus
